[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/schiedam.jpg" type="Texture" id=1]
[ext_resource path="res://battle_scene.gd" type="Script" id=4]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.784314, 0, 0.894118, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]

[node name="battle_scene" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="battle_scene"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_sprite" type="Sprite" parent="battle_scene/background"]
position = Vector2( -425.223, 353.603 )
scale = Vector2( 0.264063, 0.352778 )
offset = Vector2( 2390.43, -47.0629 )

[node name="enemy_sprite" type="Sprite" parent="battle_scene/background"]
position = Vector2( 75.7089, 357.659 )
scale = Vector2( 0.310108, 0.194615 )
offset = Vector2( 2390.43, -47.0629 )

[node name="Panel" type="Panel" parent="battle_scene/background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -457.0
margin_top = -115.0
margin_right = 492.0

[node name="Fight_button" type="Button" parent="battle_scene/background/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_bottom = 44.0
text = "FIght"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run_button" type="Button" parent="battle_scene/background/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -257.0
margin_top = -53.0
margin_right = -3.0
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="battle_scene/background/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = -25.0
margin_right = 95.5
margin_bottom = 23.0
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="battle_scene"]
anims/RESET = SubResource( 10 )
anims/fade_in = SubResource( 11 )
anims/fade_out = SubResource( 12 )

[node name="ColorRect" type="ColorRect" parent="battle_scene"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="battle_scene/background/Panel/Run_button" to="battle_scene" method="_on_Run_button_pressed"]
[connection signal="animation_finished" from="battle_scene/AnimationPlayer" to="battle_scene" method="_on_AnimationPlayer_animation_finished"]
